# agent-adaptation-finance

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  time_utils.py
agents/: macro_fund.md  mutual_fund.md  passive_fund.md  quant_fund.md  retail_contrarian.md  retail_momentum.md
docs/: agent_finance_paper_markdown.md  implementation_plan.md  us_iran_war_sp500_daily_codex.md  us_iran_war_sp500_timeline_codex.md  v2_fittness_MAS.md  v3_market_realism_fixes.md  v4_market_structure_calibration.md
scenarios/: event_chain.sh  event_chain_2020.sh  single_event.sh
src/agent_runtime/: agent_factory.py  llm.py
src/graph/: main_graph.py  state.py
src/graph/nodes/: collect_responses.py  dispatch_agents.py  extract_signal.py  generate_report.py
src/schemas/: evolution.py  response.py
src/simulation/: __init__.py  engine.py  events.py  feedback.py  genetics.py  order_book.py  policy.py  population.py  reporting.py  utils.py
tests/: test_evolution.py  test_validation.py
